Corrected internet connectivity error

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [SectionOne]
-username = Testuser
-password = Testpassword
-previousnumber = 0
+username = sheeshmohsin
+password = uniquepiece
+previousnumber = 6
 
