Corrected some miscellaneous errors

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [SectionOne]
-username = sheeshmohsin
-password = uniquepiece
-previousnumber = 6
+username = TestUser
+password = TestPassword
+previousnumber = 0
 
